--- a/index.html
+++ b/index.html
@@ -7,61 +7,65 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #ffe6e6;
+            background: linear-gradient(to right, #ffcccc, #ffe6e6);
             text-align: center;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
         .container {
             max-width: 600px;
-            margin: 50px auto;
             background: white;
-            padding: 20px;
+            padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+            animation: fadeIn 1.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
         }
         h1 {
-            color: #ff4d4d;
+            color: #ff1a1a;
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+        .message-box {
+            background: #ff9999;
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 20px;
+            color: white;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         p {
             font-size: 18px;
             color: #333;
+            margin-top: 20px;
         }
-        .message-box {
-            background: #ffe6e6;
-            padding: 15px;
-            border-radius: 10px;
-            font-size: 18px;
-            color: #cc0000;
-            margin-bottom: 20px;
+        .heart {
+            color: #ff1a1a;
+            font-size: 24px;
+            animation: heartbeat 1.5s infinite;
         }
-        textarea {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            border-radius: 10px;
-            border: 1px solid #ddd;
-        }
-        button {
-            background: #ff4d4d;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 10px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #cc0000;
+        @keyframes heartbeat {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>I'm Sorry, My Love</h1>
+        <h1>I'm Sorry, My Love ❤️</h1>
         <div class="message-box">
-            My dearest love, I never meant to hurt you, and my heart aches knowing I did. You mean the world to me, and I will do everything in my power to make things right. Please forgive me. You are my everything. ❤️
+            My dearest love, I never meant to hurt you, and my heart aches knowing I did. You mean the world to me, and I will do everything in my power to make things right. Please forgive me. You are my everything. <span class="heart">❤️</span>
         </div>
+        <p>With all my love, forever and always.</p>
     </div>
 </body>
 </html>
