--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I'm Sorry, My Love</title>
+    <title>I'm Sorry,My Love Aishwarya ❤</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>I'm Sorry, My Love ❤️</h1>
+        <h1>I'm Sorry, My Love Aishwarya❤️</h1>
         <div class="message-box">
             My dearest love, I never meant to hurt you, and my heart aches knowing I did. You mean the world to me, and I will do everything in my power to make things right. Please forgive me. You are my everything. <span class="heart">❤️</span>
         </div>
