--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <h1>I'm Sorry, My Love Aishwarya❤️</h1>
         <div class="message-box">
-            My dearest love, I never meant to hurt you, and my heart aches knowing I did. You mean the world to me, and I will do everything in my power to make things right. Please forgive me. You are my everything. <span class="heart">❤️</span>
+            My dearest love, I never meant to hurt you, and my heart aches knowing I did. You mean the world to me, and I will do everything in my power to make things right. Please forgive me. You are my everything. I never wanted to make it worse please try to understand how much I need you and if any moment you feel you are not happy, then do what you think. But now it is about us so please think na, please. <span class="heart">❤️</span>
         </div>
         <p>With all my love, forever and always.</p>
     </div>
