--- a/index.html
+++ b/index.html
@@ -57,67 +57,23 @@
             50% { transform: scale(1.2); }
             100% { transform: scale(1); }
         }
-    </style>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I'm Sorry, My Love</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #ffcccc, #ffe6e6);
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            max-width: 600px;
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-            animation: fadeIn 1.5s ease-in-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9); }
-            to { opacity: 1; transform: scale(1); }
-        }
-        h1 {
-            color: #ff1a1a;
-            font-size: 28px;
-            margin-bottom: 15px;
-        }
-        .message-box {
-            background: #ff9999;
-            padding: 20px;
-            border-radius: 10px;
-            font-size: 20px;
+        .play-button {
+            background: #ff4d4d;
             color: white;
-            font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        p {
-            font-size: 18px;
-            color: #333;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10px;
+            font-size: 16px;
+            cursor: pointer;
             margin-top: 20px;
         }
-        .heart {
-            color: #ff1a1a;
-            font-size: 24px;
-            animation: heartbeat 1.5s infinite;
+        .play-button:hover {
+            background: #cc0000;
         }
-        @keyframes heartbeat {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-            100% { transform: scale(1); }
+        .song-text {
+            font-size: 16px;
+            color: #ff4d4d;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -126,21 +82,22 @@
         <source src="jogi.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            let audio = document.getElementById("bg-music");
-            audio.play().catch(error => {
-                console.log("Autoplay was prevented: ", error);
-            });
-        });
-    </script>
-
     <div class="container">
         <h1>I'm Sorry, My Love Aishwarya❤️</h1>
         <div class="message-box">
             My dearest love, I never meant to hurt you, and my heart aches knowing I did. You mean the world to me, and I will do everything in my power to make things right. Please forgive me. You are my everything. I never wanted to make it worse please try to understand how much I need you and if any moment you feel you are not happy, then do what you think. But now it is about us so please think na, please. <span class="heart">❤️</span>
         </div>
         <p>With all my love, forever and always.</p>
+        <button class="play-button" onclick="playMusic()">Play Music</button>
+        <p class="song-text">A beautiful song for a beautiful girl</p>
     </div>
+     <script>
+        function playMusic() {
+            let audio = document.getElementById("bg-music");
+            audio.play().catch(error => {
+                console.log("Autoplay was prevented: ", error);
+            });
+        }
+    </script>
 </body>
 </html>
