--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="https://drive.google.com/file/d/1t3bKNpAKqixp-h5hcZ3XCUohizD9JhVK/view?usp=sharing" type="audio/mpeg">
+        <source src="https://drive.google.com/uc?export=download&id=1t3bKNpAKqixp-h5hcZ3XCUohizD9JhVK" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <div class="container">
